--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Awesome <span>Spotify App</span> Goes Here</h1>
     <!-- Add form markup for an input field with submit button -->
-
+    <!-- Example refernece: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/search -->
     <script src="app.js"></script>
   </body>
 </html>
